--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
 
     <!-- for Facebook -->
     <meta property="og:title" content="「專題迷宮」你敢挑戰嗎？"/>
-    <meta property="og:url" content="https://nmdap.udn.com.tw/newmedia/2019/stories_review/"/>
-    <meta property="og:image" content="https://nmdap.udn.com.tw/newmedia/2019/stories_review/meta.jpg"/>
-    <!-- <meta property="og:url" content="https://udn.com/newmedia/2019/stories_review/"/>
-    <meta property="og:image" content="https://udn.com/newmedia/2019/stories_review/meta.jpg"/> -->
+    <!-- <meta property="og:url" content="https://nmdap.udn.com.tw/newmedia/2019/stories_review/"/>
+    <meta property="og:image" content="https://nmdap.udn.com.tw/newmedia/2019/stories_review/meta.jpg"/> -->
+    <meta property="og:url" content="https://udn.com/newmedia/2019/stories_review/"/>
+    <meta property="og:image" content="https://udn.com/newmedia/2019/stories_review/meta.jpg"/>
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:description" content="聯合報新媒體中心在2019年共製作14檔專題，是史上最多產的一年。快來挑戰專題迷宮，迷宮內藏有12顆彩蛋，集滿彩蛋可獲神秘獎勵！"/>
